[package]
version = "2.0.0"
authors = [
    "Sean Oxley <sean.oxley@bibo.com.ph>",
    "Kornel Lesiński <kornel@geekhood.net>",
    "Richard Diamond <wichard@vitalitystudios.com>",
]
description = "Rust idiomatic wrapper to libwebm"
keywords = ["webm", "video"]
license = "MPL-2.0"
name = "webm"
homepage = "https://lib.rs/crates/webm"
readme = "README.md"
repository = "https://github.com/DiamondLovesYou/rust-webm.git"
categories = [ "multimedia::video", "multimedia::encoding", "api-bindings" ]
edition = "2024"

[dependencies]
webm-sys = { version = "2.0.0", path = "src/sys" }

[lib]
name = "webm"
path = "src/lib/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }
