[package]
authors = [
    "Kornel Lesiński <kornel@geekhood.net>",
    "Richard Diamond <wichard@vitalitystudios.com>",
]
build = "build.rs"
description = "Rust FFI bindings and wrapper for libwebm"
documentation = "https://docs.rs/webm-native"
license = "MPL-2.0"
name = "webm-sys-native"
readme = "README.md"
repository = "https://github.com/pornel/rust-webm.git"
include = [
    "lib.rs", "build.rs", "Cargo.toml",
    "ffi.cpp",
    "libwebm/*.hpp",
    "libwebm/common/*.h",
    "libwebm/mkvmuxer/*.cc",
    "libwebm/mkvmuxer/*.h",
    "libwebm/mkvparser/*.cc",
    "libwebm/mkvparser/*.h",
]
keywords = ["webm", "mkv", "matroska", "vp9"]
categories = [ "external-ffi-bindings", "multimedia::encoding" ]
version = "0.3.5"

[build-dependencies]
gcc = "=0.3.51"

[lib]
name = "webm_sys"
path = "lib.rs"
